--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
        <div class="row justify-content-md-center regSection" style="display: block;">
         <div class="col-md-10 col-md-offset-1">
        <div class="mb-5 form">
-        <div class="red-t my-4  font-weight-bold text-center regist-head">  PLEASE ENTER YOUR MOBILE NUMBER </div>        
+        <div class="my-4  font-weight-bold text-center regist-head">  PLEASE ENTER YOUR <br/>MOBILE NUMBER </div>        
        <div class="form-group my-5">
         <input type="number" class="form-control" id="phonenumber"  placeholder="Mobile number*">
       </div>
        
-      <div class="form-group form-check">
+      <div class="form-group form-check my-5">
       <p class="form-check-label">
-        <input class="form-check-input" id="terms" type="checkbox"> I agree to program’s <a class="red-t cursor" data-toggle="modal" data-target="#myModal"> terms and conditions </a>
+        <input class="form-check-input" id="terms" type="checkbox"> I am above the legal drinking age and agree to program’s <a class="red-t cursor" data-toggle="modal" data-target="#myModal"> terms and conditions </a>
         </p>
       </div>
       
