--- a/game.html
+++ b/game.html
@@ -11,8 +11,9 @@
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <script src='https://www.google.com/recaptcha/api.js'></script>
-
+  <!-- Bootstrap is required -->
+<script src="js/jquery.bcSwipe.js"></script>
+  
 </head>
 
 <body class="register-page">
@@ -20,7 +21,7 @@
 <nav class="navbar navbar-inverse" style=>
     <div class="container-fluid">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myNavbar" aria-expanded="false">
+        <button type="button" class="navbar-toggle collapsed pull-left" data-toggle="collapse" data-target="#myNavbar" aria-expanded="false">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>                        
@@ -106,26 +107,60 @@
             </div>
             <div class="item">
               <div class="col-sm-12">
-                block3
+                <div class="row">
+                  <div class="col-xs-4 over ball-icon">Over: 3</div>
+                  <div class="col-xs-4 result won"><span>You won</span></div>
+                  <div class="col-xs-4 px-5 coin text-right">10</div>
+                </div>
+
+
+                <div class="col my-5 text-center font-weight-bold quest">
+                  <p>
+                    Will the bowler cross 130 kmph mark in 3rd over?
+                  </p>
+                </div>
+
+                <div class="col my-5 text-center answer font-weight-bold ">
+                  <button type="submit" class="btn btn-submit mt-3 btn-option">Submit</button>
+                  <button type="submit" class="btn btn-submit mt-3 btn-option">Submit</button>
+                  <button type="submit" class="btn btn-submit mt-3 btn-option">Submit</button>
+                  <button type="submit" class="btn btn-submit mt-3 btn-option">Submit</button>                  
+                </div>
+
               </div>             
             </div>
 
             <div class="item">
               <div class="col-sm-12">
-                block5
-              </div>              
+                <div class="row">
+                  <div class="col-xs-4 over ball-icon">Over: 3</div>
+                  <div class="col-xs-4 result won"><span>You won</span></div>
+                  <div class="col-xs-4 px-5 coin text-right">10</div>
+                </div>
+
+
+                <div class="col my-5 text-center font-weight-bold quest">
+                  <p>
+                    Will the bowler cross 130 kmph mark in 3rd over?
+                  </p>
+                </div>
+
+                <div class="col my-5 text-center answer font-weight-bold ">
+                  <button type="submit" class="btn btn-submit mt-3 btn-option">Submit</button>
+                  <button type="submit" class="btn btn-submit mt-3 btn-option">Submit</button>
+                  <button type="submit" class="btn btn-submit mt-3 btn-option">Submit</button>
+                  <button type="submit" class="btn btn-submit mt-3 btn-option">Submit</button>                  
+                </div>
+
+              </div>             
             </div>
 
           </div>
 
           <!-- Left and right controls -->
-          <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
+          <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">            
           </a>
-          <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
+          <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">            
           </a>
         </div>
       </div>
@@ -165,15 +200,55 @@
       min-height: 200px;
       text-align: center;
     }
+    .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form{
+      left:-12rem;
+    }
+    .carousel-control.left:{
+    position:relative;
+}
+.carousel-inner{
+  border:1px solid #d4c9c9;
+  padding:1rem 0;  
+  background-color: white;
+    box-shadow: 0px 0px 9px 0px #6e6363;
+}
+.carousel-control.left , .carousel-control.right{
+  background:none !important;
+  background-image:none !important;
+}
+.carousel-control.left:before{
+    content:"";
+    position:absolute;
+    top:-0rem;
+    width:2.4rem;
+    left:-3.6rem;
+    min-height:38rem;
+    border:2px solid #d4c9c9;
+    box-shadow: inset 0px -8px 6px 0px #0000004a;
+}
+
+.carousel-control.right:after{
+    content:"";
+    position:absolute;
+    top:-0rem;
+    width:2.2rem;
+    right:-3.6rem;
+    min-height:38rem;
+    border:2px solid #d4c9c9;
+    box-shadow: inset -2px 0px 5px 0px #0000004a;
+}
+.carousel-inner {}
 </style>
 <script type="text/javascript">
 
 $(document).ready(function(){
+
   $("#myCarousel").carousel();
     if ( $(window).width() < 640 ) {
        $('.col-sm-6').unwrap().addClass('item');
        $('.col-sm-6:first').addClass('active');
     }
+     $('.carousel').bcSwipe({ threshold: 50 });
 });
 </script>
 </html>
